# radai

./: .env.example  .gitignore  FEATURES.md  LICENSE  README.md  pyproject.toml
deploy/: nginx.conf.example  radai-spotify-desktop.service  radai-web.service  radai-xvfb.service
src/radai_agent/: __init__.py  cli.py  config.py  db.py  deepseek.py  downloads.py  radio_engine.py  rss.py  scheduler.py  service.py  spotify.py  spotify_desktop.py  stream.py  telegram_bot.py  transcripts.py
src/radai_engine/: __init__.py  audio.py  cli.py  config.py  deepseek.py  downloads.py  models.py  radio_engine.py  rss.py  service.py  spotify.py  spotify_desktop.py  spotify_device.py  spotify_playlists.py  stream.py  transcripts.py  web.py  youtube.py
tests/: test_audio.py  test_db.py  test_deepseek_plan.py  test_radio_engine.py  test_rss.py  test_scheduler.py  test_stream_spotify_surfaces.py  test_telegram_commands.py  test_transcripts.py
web/: app.js  index.html  login.html  login.js  style.css
