[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "radai-engine"
version = "0.1.0"
description = "Personal VPS podcast and Spotify stream engine"
requires-python = ">=3.11"
dependencies = ["python-dotenv>=1.0", "websocket-client>=1.9"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
radai-engine = "radai_engine.cli:main"
radai-web = "radai_engine.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src/radai_engine"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
